Fix 7361 - Why Paused should wrap (#7422)

--- a/src/components/SecondaryPanes/Frames/WhyPaused.css
+++ b/src/components/SecondaryPanes/Frames/WhyPaused.css
@@ -13,6 +13,7 @@
   font-weight: 300;
   cursor: default;
   min-height: 24px;
+  white-space: normal;
 }
 
 .why-paused > div {
